--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
   <script>
     // 🔧 EDIT THIS CONFIG (fastest way to customize everything)
     const CONFIG = {
-      projectName: "AeroScan (Example Name)",
-      headline: "Portable screening that helps catch risk earlier — before symptoms escalate.",
+      projectName: "SCENT",
+      headline: "Sensor-based Cancer Exhaled-Breath Nanoparticle Technology — screen before symptoms escalate.",
       tagline:
         "We’re building a non-invasive, rapid screening concept designed for community use. It helps prioritize follow-up diagnostics and supports preventive care.",
       whatItIs:
