--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <div class="divider"></div>
 
           <p class="mini">
-            Tip: Customize text quickly by editing the <code class="inline">CONFIG</code> object at the bottom of this file.
+            SCENT was inspired by multiple deaths in the creators' families from lung cancer detected too late. Nobody should have to go through that. That's why we built SCENT, to bring actionable change to the world around us.
           </p>
         </div>
       </div>
@@ -490,9 +490,9 @@
     // 🔧 EDIT THIS CONFIG (fastest way to customize everything)
     const CONFIG = {
       projectName: "SCENT",
-      headline: "Sensor-based Cancer Exhaled-Breath Nanoparticle Technology — screen before symptoms escalate.",
+      headline: "Sensor-based Cancer Exhaled-breath Nanoparticle Technology — screen before symptoms escalate.",
       tagline:
-        "We’re building a non-invasive, rapid screening concept designed for community use. It helps prioritize follow-up diagnostics and supports preventive care.",
+        "SCENT is a non-invasive, rapid screening concept designed for community use. It helps prioritize follow-up diagnostics and supports preventive care.",
       whatItIs:
         "A portable screening tool concept that collects a quick, non-invasive sample (ex: breath) and analyzes it for risk signals using sensor patterns.",
       whatItDoes:
@@ -513,17 +513,16 @@
           "Deployed via community clinics + mobile units + telehealth follow-ups, with clear escalation criteria and longitudinal monitoring.",
       },
       team: [
-        { name: "Your Name", role: "Research & Design" },
-        { name: "Teammate Name", role: "Data & Validation" },
-        { name: "Teammate Name", role: "Engineering & Prototyping" },
+        { name: "Tharun Nambi", role: "Research & Design" },
+        { name: "Esshan", role: "Engineering & Building" },
       ],
       citations: [
         "National Cancer Institute. (Year). Title of page/article. Accessed Month Day, Year.",
         "CDC. (Year). Relevant statistic page. Accessed Month Day, Year.",
       ],
       contact: {
-        email: "yourteam@email.com",
-        org: "Your School / Chapter",
+        email: "tharun.h.nambi@gmail.com",
+        org: "Olentangy Orange / Chapter 69279",
         pitch15s:
           "We built a portable, non-invasive screening concept that can be used in community settings to flag higher-risk cases earlier—helping clinicians prioritize follow-up tests and potentially reducing late-stage care costs.",
       }
