--- a/index.html
+++ b/index.html
@@ -555,8 +555,13 @@
         { name: "Esshan Kharat", role: "Engineering & Building" },
       ],
       citations: [
-        "National Cancer Institute. (Year). Title of page/article. Accessed Month Day, Year.",
-        "CDC. (Year). Relevant statistic page. Accessed Month Day, Year.",
+        "Catalão Moura, L., Raposo, M., & Vassilenko, E. (2023). Volatile organic compounds as biomarkers for disease diagnosis: Advances, challenges, and perspectives. Biosensors, 13(1), 1–25. https://doi.org/10.3390/bios13010001",
+        "Ghosh, A., Dutta, R., et al. (2021). Volatile organic compounds in biological matrices as a sensitive tool in cancer diagnosis. Journal of Breath Research, 15(3), 036002. https://doi.org/10.1088/1752-7163/abf3a0",
+        "Piqueret, B., Sandoz, J. C., et al. (2022). Ants detect cancer cells through volatile organic compounds. Proceedings of the Royal Society B: Biological Sciences, 289(1978), 20220555. https://doi.org/10.1098/rspb.2022.0555",
+        "Schallschmidt, K., Becker, R., et al. (2015). Honey bees cannot discriminate lung cancer cell odors from controls using classical conditioning. Frontiers in Behavioral Neuroscience, 9, 211. https://doi.org/10.3389/fnbeh.2015.00211",
+        "Strauch, M., Lüdke, A., et al. (2014). Detection of cancer-related volatile organic compounds using insect olfactory systems. PLOS ONE, 9(1), e86329. https://doi.org/10.1371/journal.pone.0086329",
+        "Shields, V. D., & Hildebrand, J. G. (2000). Responses of antennal olfactory receptor neurons to plant volatile organic compounds in Manduca sexta. Journal of Comparative Physiology A, 186(2), 113–128. https://doi.org/10.1007/s003590050012",
+        "Frontiers in Ecology and Evolution. (2022). The neglected potential of invertebrates in disease detection via volatile organic compounds. Frontiers in Ecology and Evolution, 10, 843635. https://doi.org/10.3389/fevo.2022.843635"
       ],
       contact: {
         email: "tharun.h.nambi@gmail.com",
