--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
 
     <footer>
       <div class="wrap" style="padding:0">
-        <div>© <span id="year"></span> <span id="footerName">Project Name</span>. Built for presentations + judging.</div>
-        <div style="margin-top:6px">Made with HTML/CSS/JS — no frameworks needed.</div>
+        <div>© <span id="year"></span> <span id="footerName">Project Name</span>.</div>
+        <div style="margin-top:6px"></div>
       </div>
     </footer>
   </main>
