--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
     // 🔧 EDIT THIS CONFIG (fastest way to customize everything)
     const CONFIG = {
       projectName: "SCENT",
-      headline: "Sensor-based Cancer Exhaled-breath Nanoparticle Technology — screen before symptoms escalate.",
+      headline: "Sensor-based Cancer Exhaled-breath Nanoparticle Technology: screen before symptoms escalate.",
       tagline:
         "SCENT is a non-invasive, rapid screening concept designed for community use. It helps prioritize follow-up diagnostics and supports preventive care.",
       whatItIs:
