--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
           <div class="divider"></div>
 
           <p class="mini">
-            SCENT was inspired by multiple deaths in the creators' families from lung cancer detected too late. Nobody should have to go through that.
-            That's why we built SCENT — to bring actionable change to the world around us.
+            Here's a link to a YouTube video demonstrating SCENT with machine action!
+            https://youtu.be/-SEkKj8BXsc?si=HLwz_v81fNUHBIUb
           </p>
         </div>
       </div>
