--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
       <div class="section-head">
         <div>
           <h2>Citations</h2>
-          <p class="sub">Add the sources you used for stats/claims. Keep it judge-proof.</p>
+          <p class="sub"></p>
         </div>
       </div>
 
@@ -498,7 +498,7 @@
       <div class="section-head">
         <div>
           <h2>Contact</h2>
-          <p class="sub">A simple way for judges/mentors to reach you.</p>
+          <p class="sub">A simple way to reach us</p>
         </div>
       </div>
 
